--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -1535,6 +1535,25 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/14766695},
 volume = {51},
 year = {2004}
 }
+@article{DiChiara2008,
+abstract = {The incidence of anaphylactic reactions during anesthesia is between 1:5000 and 1:25000 and it is one of the few causes of mortality directly related to general anesthesia. The most important requirements in the treatment of this clinical condition are early diagnosis and maintenance of vital organ perfusion. Epinephrine administration is generally considered as the first line treatment of anaphylactic reactions. However, recently, new pharmacological approaches have been described in the treatment of different forms of vasoplegic shock. We describe the case of a child who was undergoing surgery for ventricular septal defect, with an anaphylactic reaction to heparin that was refractory to epinephrine infusion and was effectively treated by low dose vasopressin infusion. In case of anaphylactic shock, continuous infusion of low-dose vasopressin might be considered after inadequate response to epinephrine, fluid resuscitation and corticosteroid administration.},
+author = {{Di Chiara}, Luca and Stazi, Giulia V and Ricci, Zaccaria and Polito, Angelo and Morelli, Stefano and Giorni, Chiara and {La Salvia}, Ondina and Vitale, Vincenzo and Rossi, Eugenio and Picardo, Sergio},
+doi = {10.1186/1752-1947-2-36},
+file = {::},
+issn = {1752-1947},
+journal = {Journal of Medical Case Reports},
+keywords = {General Practice / Family Medicine,Medicine/Public Health,Primary Care Medicine,Public Health,general},
+mendeley-groups = {Refractory anaphylaxis},
+month = {dec},
+number = {1},
+pages = {36},
+publisher = {BioMed Central},
+title = {{Role of vasopressin in the treatment of anaphylactic shock in a child undergoing surgery for congenital heart disease: a case report}},
+url = {http://jmedicalcasereports.biomedcentral.com/articles/10.1186/1752-1947-2-36},
+volume = {2},
+year = {2008}
+}
+
 @article{Stocche2004,
 abstract = {BACKGROUND AND OBJECTIVES: The risk of perioperative anaphylaxis should always be considered. The incidence of anesthetic allergic reactions is controversial, varying from 1/3,000 to 1/20,000, with mortality range between 3 and 9{\%}. This report describes the use of methylene blue as coadjuvant drug to treat anaphylaxis refractory to conventional therapy. CASE REPORT: A 53-year-old male patient was submitted to inguinal hernia correction under spinal anesthesia. After receiving 1.5 g intravenous dipirone at surgery completion, he immediately developed bronchospasm, cyanosis, decreased SpO 2 and SBP, culminating with cardiac arrest. Resuscitation was started with external cardiac massage followed by tracheal intubation, as well as 1 mg epinephrine and 1 mg atropine injections. Heart rate returned (150 bpm) with no palpable pulse though. Additional 1 mg epinephrine and 1 g hydrocortisone were administered with central pulse recovery (8 minutes). Although receiving dopamine (20 $\mu$g.kg -1.min -1), patient remained hypotensive (60 mmHg) until 80 minutes. Intravenous 100 mg methylene blue was then administered with increased SBP to 85 and 105 mmHg after the second dose. Dopamine dose was tapered from 10 to 7, 5 and finally 2 $\mu$g.kg -1.min -1. CONCLUSIONS: Histamine is the major anaphylaxis mediator. Inducing nitric oxide (NO) production, it consequently increases guanylate cyclase, which promotes arteriolar vasodilation by increasing cyclic GMP. Methylene blue may be helpful in such situations because it inhibits guanylate cyclase and consequently vasodilation, resulting in hemodynamic improvement.},
 author = {Stocche, Renato Mestriner and Garcia, Lu{\'{i}}s Vicente and Reis, Marlene Paulino Dos and Klamt, Jyrson Guilherme and {\'{E}}vora, Paulo Roberto B.},
